Fixed Overview not changing on smaller Resolutions

--- a/Styles/__MediaQueries.scss
+++ b/Styles/__MediaQueries.scss
@@ -226,7 +226,7 @@
                 letter-spacing: 0em;
                 text-transform: uppercase;
                 font-weight: bolder;
-                font-size: 1em;
+                font-size: 2.5em !important;
             }
 
             span{
