--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -604,7 +604,7 @@ footer .contactInfoHolder .contactInfo a {
     letter-spacing: 0em;
     text-transform: uppercase;
     font-weight: bolder;
-    font-size: 1em;
+    font-size: 2.5em !important;
   }
   .landingImage .overView span {
     font-size: 2em;
